--- a/Videos/Index.html
+++ b/Videos/Index.html
@@ -7,34 +7,67 @@
 
     <meta charset="utf-8" />
     <title>DBS Website</title>
+
+    <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 
-<style>
-    #nav-menu-div {
-        width: 100%;
-        text-align: center;
-    }
+<script>
 
-    #nav-menu-ul {
-        display: inline-block;
-    }
-</style>
+
+
+</script>
 
 <body>
-    <div class="container" id="header-div">
-        <div id="header-div">
+
+    <div class="container" id="overall-container">
+        <div class="container" id="header-div">
+            <div class="logo">
+                <span><img width="80" height="80" src="../Images/logo.jpg" alt="DBS Logo"></span>
+                <span class="title">Dive Beneath the Surface</span>
+            </div>
+            <div id="nav-menu-div">
+                <div class="my-nav my-nav-pills" id="nav-menu-ul">
+                    <div class="border"></div>
+                    <div class="li"><a href="../Index.html">Home</a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Lesson Plans/Index.html"><span class="pill-label">Lessons</span></a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Events/Index.html"><span class="pill-label">Events</span></a></div>
+                    <div class="border"></div>
+                    <div class="li active"><a href="../Videos/Index.html"><span class="pill-label">Videos</span></a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Background/Index.html"><span class="pill-label">About</span></a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Contact/Index.html"><span class="pill-label">Contact</span></a></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" id="content-div">
+
+            <div style="margin-top: 80px; background-color: black;"></div>
+
+
+
+            <div class="video-div">
+                <div class="video-wrapper">
+                    <!--<video id="video" style="height: 600px;" controls>
+                        <source src="Videos/DSCN0043.MOV">
+                    </video>-->
+                    <iframe height="600" width="900" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <!--<div class="video-title top-center translucent-black-bg">
+                        Video Title
+                    </div>-->
+                </div>
+            </div>
 
         </div>
-        <div id="nav-menu-div">
-            <ul class="nav nav-pills" id="nav-menu-ul">
-                <li><a href="../Index.html">Home</a></li>
-                <li><a href="../Background/Index.html">Background</a></li>
-                <li><a href="../LessonPlans/Index.html">Lesson Plans</a></li>
-                <li><a href="../Events/Index.html">Events</a></li>
-                <li class="active"><a href="#">Videos</a></li>
-                <li><a href="../Contact/Index.html">Contact</a></li>
-            </ul>
+
+        <div id="footer">
+            <hr />
+            Copyright - DBS 2018
         </div>
     </div>
-    <div>Videos</div>
+
+
 </body>
