--- a/Videos/Index.html
+++ b/Videos/Index.html
@@ -9,13 +9,8 @@
     <title>DBS Website</title>
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-
-<script>
-
-
-
-</script>
 
 <body>
 
@@ -45,21 +40,92 @@
 
         <div class="container" id="content-div">
 
-            <div style="margin-top: 80px; background-color: black;"></div>
+            <!--making some space, might need to fix for dynamic windows? TODO-->
+            <div><br><br><br><br><br><br></div>
 
+            <table>
+                <tr>
+                    <td class="event-content">
+                        <div class="centered">
+                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
 
+                        <p>
+                            <b>Dive Beneath The Surface</b><br>
+                            <small>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                                Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                                Quisque maximus elit tellus, quis tincidunt sapien vehicula sed. Curabitur porttitor justo est,
+                                at maximus mi finibus at.
+                            </small>
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="event-content">
+                        <div class="centered">
+                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
 
-            <div class="video-div">
-                <div class="video-wrapper">
-                    <!--<video id="video" style="height: 600px;" controls>
-                        <source src="Videos/DSCN0043.MOV">
-                    </video>-->
-                    <iframe height="600" width="900" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <!--<div class="video-title top-center translucent-black-bg">
-                        Video Title
-                    </div>-->
-                </div>
-            </div>
+                        <p>
+                            <b>Dive Beneath The Surface</b><br>
+                            <small>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                                Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                                Quisque maximus elit tellus, quis tincidunt sapien vehicula sed. Curabitur porttitor justo est,
+                                at maximus mi finibus at.
+                            </small>
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="event-content">
+                        <div class="centered">
+                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+
+                        <p>
+                            <b>Dive Beneath The Surface</b><br>
+                            <small>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                                Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                                Quisque maximus elit tellus, quis tincidunt sapien vehicula sed. Curabitur porttitor justo est,
+                                at maximus mi finibus at.
+                            </small>
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="event-content">
+                        <div class="centered">
+                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+
+                        <p>
+                            <b>Dive Beneath The Surface</b><br>
+                            <small>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                                Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                                Quisque maximus elit tellus, quis tincidunt sapien vehicula sed. Curabitur porttitor justo est,
+                                at maximus mi finibus at.
+                            </small>
+                        </p>
+                    </td>
+                </tr>
+
+            </table>
+
+            <!--<div class="video-div">-->
+                <!--<div class="video-wrapper">-->
+                    <!--&lt;!&ndash;<video id="video" style="height: 600px;" controls>-->
+                        <!--<source src="Videos/DSCN0043.MOV">-->
+                    <!--</video>&ndash;&gt;-->
+                    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
+                    <!--&lt;!&ndash;<div class="video-title top-center translucent-black-bg">-->
+                        <!--Video Title-->
+                    <!--</div>&ndash;&gt;-->
+                <!--</div>-->
+            <!--</div>-->
 
         </div>
 
