--- a/Events/Index.html
+++ b/Events/Index.html
@@ -2,39 +2,137 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <meta charset="utf-8" />
     <title>DBS Website</title>
+
+    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
 
-<style>
-    #nav-menu-div {
-        width: 100%;
-        text-align: center;
-    }
-
-    #nav-menu-ul {
-        display: inline-block;
-    }
-</style>
-
 <body>
-    <div class="container" id="header-div">
-        <div id="header-div">
 
+<div class="container" id="overall-container">
+    <div class="container" id="header-div">
+        <div class="logo">
+            <span><img width="80" height="80" src="../Images/logo.jpg" alt="DBS Logo"></span>
+            <span class="title">Dive Beneath the Surface</span>
         </div>
         <div id="nav-menu-div">
-            <ul class="nav nav-pills" id="nav-menu-ul">
-                <li><a href="../Index.html">Home</a></li>
-                <li><a href="../Background/Index.html">Background</a></li>
-                <li><a href="../LessonPlans/Index.html">Lesson Plans</a></li>
-                <li class="active"><a href="#">Events</a></li>
-                <li><a href="../Videos/Index.html">Videos</a></li>
-                <li><a href="../Contact/Index.html">Contact</a></li>
-            </ul>
+            <div class="my-nav my-nav-pills" id="nav-menu-ul">
+                <div class="border"></div>
+                <div class="li"><a href="../Index.html">Home</a></div>
+                <div class="border"></div>
+                <div class="li"><a href="../LessonPlans/Index.html"><span class="pill-label">Lessons</span></a></div>
+                <div class="border"></div>
+                <div class="li active"><a href="#"><span class="pill-label">Events</span></a></div>
+                <div class="border"></div>
+                <div class="li"><a href="../Videos/Index.html"><span class="pill-label">Videos</span></a></div>
+                <div class="border"></div>
+                <div class="li"><a href="../Background/Index.html"><span class="pill-label">About</span></a></div>
+                <div class="border"></div>
+                <div class="li"><a href="../Contact/Index.html"><span class="pill-label">Contact</span></a></div>
+            </div>
         </div>
     </div>
-    <div>Events</div>
+
+
+        <!--making some space, might need to fix for dynamic windows? TODO-->
+        <div><br><br><br><br><br><br></div>
+
+        <table>
+            <tr>
+                <td>
+                    <img class="event-image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                </td>
+                <td class="event-content">
+                    <p>
+                        <b>Event Number One Sample Event</b>
+                    </p>
+                    4/15/18
+                    <br>
+                    <small>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                        Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                        Quisque maximus elit tellus, quis tincidunt sapien vehicula sed. Curabitur porttitor justo est,
+                        at maximus mi finibus at.
+                    </small>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="event-image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                </td>
+                <td class="event-content">
+                    <p>
+                        <b>Two Dive Monterey</b>
+                    </p>
+                    3/4/17
+                    <br>
+                    <small>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                        Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                        Quisque maximus elit tellus, quis tincidunt sapien vehicula sed. Curabitur porttitor justo est,
+                        at maximus mi finibus at. Nam quis arcu est. In eget neque nibh.
+                    </small>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="event-image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                </td>
+                <td class="event-content">
+                    <p>
+                        <b>Finding Nemo</b>
+                    </p>
+                    3/2/17
+                    <br>
+                    <small>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                        Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                        Quisque maximus elit tellus, quis tincidunt sapien vehicula sed.
+                    </small>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="event-image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                </td>
+                <td class="event-content">
+                    <p>
+                        <b>Classroom Lesson at XYZ</b>
+                    </p>
+                    2/1/17
+                    <br>
+                    <small>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan porta lobortis.
+                        Phasellus dignissim varius enim sed iaculis. Suspendisse vitae elementum nibh.
+                        Quisque maximus elit tellus, quis tincidunt sapien vehicula sed.
+                    <small>
+                </td>
+            </tr>
+        </table>
+
+
+
+    <div id="footer">
+        <hr />
+        Copyright - DBS 2018
+    </div>
+</div>
+
+
 </body>
+
+
+<!--<script>
+    $(function () {
+        $("#header-div").load("Header.html");
+    });
+</script>-->
