--- a/LessonPlans/Index.html
+++ b/LessonPlans/Index.html
@@ -62,7 +62,7 @@
         <div class="container" id="content-div">
 
             <div class="header-image-div">
-                <img class="header-image" src="../Images/learning3.jpg" alt="First slide">
+                <img class="header-image" src="../Images/learning3.JPG" alt="First slide">
                 <div class="center translucent-bg my-dark-blue-text dark-blue-translucent-bg">
                     <div class="large-font">Lesson Plans</div>
                     <button class="btn btn-DBS shadow" style="margin-bottom: 30px; font-size: 28px;" onclick="lessonPlans()">Download All Lesson Plans</button>
@@ -73,7 +73,7 @@
                 <div class="clickable-card flex" onclick="lesson1()">
                     <div class="lesson-header">
                         <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                             <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                 Lesson 1
                             </div>
@@ -89,7 +89,7 @@
                 <div class="clickable-card flex" onclick="lesson2()">
                     <div class="lesson-header">
                         <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                             <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                 Lesson 2
                             </div>
@@ -105,7 +105,7 @@
                 <div class="clickable-card flex" onclick="lesson3()">
                     <div class="lesson-header">
                         <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                             <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                 Lesson 3
                             </div>
@@ -121,7 +121,7 @@
                 <div class="clickable-card flex" onclick="lesson4()">
                     <div class="lesson-header">
                         <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                             <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                 Lesson 4
                             </div>
@@ -138,7 +138,7 @@
                     <div class="clickable-card" onclick="lesson1()">
                         <div class="lesson-header">
                             <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                                 <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                     Lesson 1
                                 </div>
@@ -153,7 +153,7 @@
                     <div class="clickable-card" onclick="lesson2()">
                         <div class="lesson-header">
                             <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                                 <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                     Lesson 2
                                 </div>
@@ -171,7 +171,7 @@
                     <div class="clickable-card" onclick="lesson3()">
                         <div class="lesson-header">
                             <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                                 <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                     Lesson 3
                                 </div>
@@ -186,7 +186,7 @@
                     <div class="clickable-card" onclick="lesson4()">
                         <div class="lesson-header">
                             <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.JPG" alt="Horned Shark">
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
                                 <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
                                     Lesson 4
                                 </div>
