--- a/Background/Index.html
+++ b/Background/Index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -42,13 +42,23 @@
     }*/
 
     .bg {
-        background-image: url("background.png");
+        background-image: url("background.PNG");
         height: 50%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
     }
-
+    .content-rows {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 50px;
+        padding-left: 10%;
+        padding-right: 10%;
+        font-size: 20px;
+        
+    }
     #mission-content {
         flex: 3;
         padding: 10px;
@@ -98,13 +108,13 @@
     <div class="container" id="overall-container">
         <div class="container" id="header-div">
             <div class="logo">
-                <span><img width="80" height="80" src="../Images/logo.jpg" alt="DBS Logo"></span>
+                <span><img width="80" height="80" src="../Images/logo.JPG" alt="DBS Logo"></span>
                 <span class="title">Dive Beneath the Surface</span>
             </div>
             <div id="nav-menu-div">
                 <div class="my-nav my-nav-pills" id="nav-menu-ul">
                     <div class="border"></div>
-                    <div class="li"><a href="../Index.html">Home</a></div>
+                    <div class="li"><a href="../index.html">Home</a></div>
                     <div class="border"></div>
                     <div class="li"><a href="../LessonPlans/Index.html"><span class="pill-label">Lessons</span></a></div>
                     <div class="border"></div>
@@ -126,11 +136,31 @@
     </p>
 
     <div class="header-image-div">
-        <img class="header-image" src="../Images/learning3.jpg" alt="First slide">
+        <img class="header-image" src="../Images/learning3.JPG" alt="First slide">
+        <div class="center translucent-bg my-light-black-text dark-blue-translucent-bg">
+            <!-- <div class="small-font">Together a team comprised of Cal Poly professors and students created an
+                educational experience that combined both their loves of marine biology and
+                their knowledge of the Next Generation Science Standards. Meet the team of dedicated
+                individuals who made Dive Beneath the Surface the great program it is today.</div> -->
+            <div class="content-row-transparent">
+            <div class="raised-card flex">
+                <div id="mission-content">
+                    Together a team comprised of Cal Poly professors and students created an
+                    educational experience that combined both their loves of marine biology and
+                    their knowledge of the Next Generation Science Standards. Meet the team of dedicated
+                    individuals who made Dive Beneath the Surface the great program it is today.
+                </div>
+
+
+            </div>
+
+            </div>
+        </div>
+
     </div>
 
-
-    <div class="content-row">
+    <!-- <div class="header-image-div">
+        <div class="content-rows">
         <div class="raised-card flex">
             <div id="mission-label">
                 ABOUT
@@ -145,8 +175,13 @@
 
         </div>
 
-    </div>
+        </div>
+        <img class="header-image" src="../Images/learning3.JPG" alt="First slide">
 
+    </div>
+ -->
+
+    
 
 
 
@@ -158,7 +193,7 @@
 
         <div class="w3-third w3-margin-bottom">
             <div class="w3-card-4">
-                <img src="../images/crow.png" alt="Crow" style="width:30%">
+                <img src="../Images/crow.PNG" alt="Crow" style="width:30%">
                 Crow White
                 <div class="w3-container">
                     <p>
@@ -173,7 +208,7 @@
         </div>
         <div class="w3-third w3-margin-bottom">
             <div class="w3-card-4">
-                <img src="../images/crow.png" alt="Crow" style="width:30%">
+                <img src="../Images/crow.PNG" alt="Crow" style="width:30%">
                 Crow White
                 <div class="w3-container">
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -182,7 +217,7 @@
         </div>
         <div class="w3-third w3-margin-bottom">
             <div class="w3-card-4">
-                <img src="../images/crow.png" alt="Crow" style="width:30%">
+                <img src="../Images/crow.PNG" alt="Crow" style="width:30%">
                 Crow White
                 <div class="w3-container">
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -191,7 +226,7 @@
         </div>
         <div class="w3-third w3-margin-bottom">
             <div class="w3-card-4">
-                <img src="../images/crow.png" alt="Crow" style="width:30%">
+                <img src="../Images/crow.PNG" alt="Crow" style="width:30%">
                 Crow White
                 <div class="w3-container">
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -200,7 +235,7 @@
         </div>
         <div class="w3-third w3-margin-bottom">
             <div class="w3-card-4">
-                <img src="../images/crow.png" alt="Crow" style="width:30%">
+                <img src="../Images/crow.PNG" alt="Crow" style="width:30%">
                 Crow White
                 <div class="w3-container">
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
